# Fapi-Sample

./: .gitignore  README.md  gunicorn.conf.py  pyproject.toml
deployments/: Dockerfile  docker-compose.yml
deployments/conf.d/: nginx.conf
migrations/: env.py
migrations/versions/: 2ac65e6a99d5_create_user_item.py  547c91aeb52c_start_migrationss.py  62d7b05630b6_add_username_to_user.py  d02388109f72_test_auto.py  f5996e453cb4_description_of_changes.py
src/: crud.py  database.py  dependencies.py  log_config.py  logging.yaml  main.py  settings.py
src/celery_worker/: tasks.py  worker.py
src/core/: database.py  log_config.py  logging.yaml  openapi.py  settings.py
src/exceptions/: exception_handler.py  exceptions.py
src/migrations/: env.py
src/models/: base.py  item.py  user.py
src/routers/: auth.py  health.py  sample_users.py  u_examples.py  users.py
src/schemas/: base.py
src/schemas/requests/: login.py
src/schemas/responses/: token.py  user.py
src/services/: user_service.py
src/tests/: conftest.py  db_utils.py
src/tests/api/: test_health.py  test_user.py
src/utils/: auth.py  string.py
