[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Me"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.13.1"
psycopg2 = "^2.9.9"
fastapi = "^0.110.1"
uvicorn = "^0.27.1"
gunicorn = "^21.2.0"
sqlalchemy = "1.4.52"
pydantic = "^2.6.4"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.2.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = "^1.7.4"
bcrypt = "^4.1.2"
argon2-cffi = "^23.1.0"
python-multipart = "^0.0.9"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.0"
requests = "^2.31.0"
httpx = "^0.27.0"
sqlalchemy-utils = "^0.41.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
